<resources>
    <string name="app_name">SimuladorCarteiraCrypto</string>
    <string name="txt_my_property">Meu patrimônio</string>
    <string name="txt_property_values">$18,00</string>
    <string name="txt_withdraw">Sacar</string>
    <string name="txt_deposit">Depositar</string>
    <string name="txt_activity_deposit_deposit_info">Digite o valor que deseja depositar.</string>
    <string name="txt_value">Digite o valor</string>
    <string name="txt_quantity">Digite a quantidade</string>
    <string name="txt_btn_deposit">DEPOSITAR</string>
    <string name="txt_btn_withdraw">SACAR</string>
    <string name="txt_activity_withdraw_value">Valor</string>
    <string name="txt_activity_wallet_details_balance_in_crypto_assets">Saldo em Criptoativos</string>
    <string name="txt_activity_withdraw_amount_prompt">Quanto você deseja sacar?</string>
    <string name="txt_activity_deposit_amount_prompt">Quanto você deseja depositar?</string>
    <string name="txt_activity_crypto_buy_form_amount_prompt">Qual valor você deseja comprar?</string>
    <string name="txt_activity_crypto_sell_form_amount_prompt">Qual quantidade você deseja vender?</string>
    <string name="txt_btn_activity_wallet_form_save">SALVAR</string>
    <string name="txt_hint_activity_wallet_form_name">Digite o nome</string>
    <string name="txt_hint_activity_wallet_form_">Digite a descrição</string>
    <string name="txt_activity_wallet_form_title">Cadastrar Carteira</string>
    <string name="txt_activity_wallet_details_balance">$ 80,00</string>
    <string name="txt_btn_activity_main_add_wallet">Adicionar Carteira</string>
    <string name="txt_activity_crypto_details_balance_available">Saldo disponível</string>
    <string name="txt_activity_crypto_details_symbol_crypto_available">(BTC)</string>
    <string name="txt_activity_crypto_details_symbol_money_available">($)</string>
    <string name="txt_activity_crypto_details_amount_crypto_available">0,00000</string>
    <string name="txt_activity_crypto_details_amount_money_available">00,00</string>
    <string name="txt_activity_crypto_details_last_price">Último preço</string>
    <string name="txt_btn_activity_crypto_details_buy">COMPRAR</string>
    <string name="txt_btn_activity_crypto_details_sell">VENDER</string>
    <string name="txt_btn_activity_wallet_details_buy">COMPRAR</string>
    <string name="txt_btn_activity_wallet_details_sell">VENDER</string>
    <string name="txt_activity_withdraw_form_current_balance">Saldo Atual </string>
    <string name="txt_activity_crypto_sell_form_quantity">Quantidade</string>
    <string name="txt_menu_wallet_details_edit">Editar</string>
    <string name="txt_wallet_form_activity_edit_wallet">Alterar Carteira</string>
    <string name="txt_wallet_form_activity_save_btn">SALVAR</string>
    <string name="txt_activity_main_signal_no_data">Ops, Internet não Disponível</string>
    <string name="txt_response_error">Algo deu errado, por favor tente novamente mais tarde</string>
    <string name="txt_no_internet_connection">Ops! Não foi possível completar a ação. Por favor, verifique sua conexão com a internet.</string>
</resources>