<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.WithdrawActivity">

    <TextView
        android:id="@+id/tv_activity_withdraw_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_activity_withdraw_value"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_activity_withdraw_amount_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_activity_withdraw_amount_prompt"
        app:layout_constraintStart_toStartOf="@id/tv_activity_withdraw_value"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_withdraw_value" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_activity_withdraw_withdraw_amount"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_withdraw_amount_prompt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_activity_withdraw_withdraw_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_value"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_activity_withdraw_withdraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_btn_withdraw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_activity_withdraw_withdraw_amount" />




</androidx.constraintlayout.widget.ConstraintLayout>