<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DepositActivity">

    <TextView
        android:id="@+id/tv_activity_deposit_deposit_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_activity_deposit_deposit_info"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_activity_deposit_deposit_amount"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_deposit_deposit_info">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_activity_deposit_deposit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_value"
            android:inputType="numberDecimal" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_activity_deposit_deposit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_btn_deposit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_activity_deposit_deposit_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>