<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.CryptoSellFormActivity">

    <TextView
        android:id="@+id/tv_activity_crypto_sell_form_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_activity_crypto_sell_form_quantity"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_activity_crypto_sell_form_amount_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_activity_crypto_sell_form_amount_prompt"
        app:layout_constraintStart_toStartOf="@id/tv_activity_crypto_sell_form_value"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_crypto_sell_form_value" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_activity_crypto_sell_form_deposit_amount"
        style="?attr/textInputOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_activity_crypto_sell_form_amount_prompt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_activity_crypto_sell_form_deposit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_quantity"
            android:inputType="numberDecimal" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_activity_sell_form_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="25%"
        app:layout_constraintStart_toStartOf="@id/til_activity_crypto_sell_form_deposit_amount"
        app:layout_constraintEnd_toStartOf="@id/btn_activity_sell_form_50"
        app:layout_constraintTop_toBottomOf="@id/til_activity_crypto_sell_form_deposit_amount" />

    <Button
        android:id="@+id/btn_activity_sell_form_50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="50%"
        app:layout_constraintStart_toEndOf="@id/btn_activity_sell_form_25"
        app:layout_constraintEnd_toStartOf="@id/btn_activity_sell_form_75"
        app:layout_constraintTop_toBottomOf="@id/til_activity_crypto_sell_form_deposit_amount" />

    <Button
        android:id="@+id/btn_activity_sell_form_75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="75%"
        app:layout_constraintStart_toEndOf="@id/btn_activity_sell_form_50"
        app:layout_constraintEnd_toStartOf="@id/btn_activity_sell_form_100"
        app:layout_constraintTop_toBottomOf="@id/til_activity_crypto_sell_form_deposit_amount" />

    <Button
        android:id="@+id/btn_activity_sell_form_100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="100%"
        app:layout_constraintStart_toEndOf="@id/btn_activity_sell_form_75"
        app:layout_constraintEnd_toEndOf="@id/til_activity_crypto_sell_form_deposit_amount"
        app:layout_constraintTop_toBottomOf="@id/til_activity_crypto_sell_form_deposit_amount" />

    <Button
        android:id="@+id/bt_activity_sell_form_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/txt_btn_activity_wallet_details_sell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_activity_sell_form_25" />

</androidx.constraintlayout.widget.ConstraintLayout>