<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.WalletDetailsActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_activity_wallet_details_balance_crypto_assets"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tv_activity_wallet_details_property"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_activity_wallet_details_balance_in_crypto_assets"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_activity_wallet_details_property_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_activity_wallet_details_balance"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/tv_activity_wallet_details_property"
                app:layout_constraintTop_toBottomOf="@id/tv_activity_wallet_details_property" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_activity_wallet_details_balance_crypto_assets"
        tools:itemCount="5"
        tools:listitem="@layout/coin_wallet_item" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/fab_activity_wallet_details_buy_crypto"
        android:layout_height="wrap_content"
        app:icon="@drawable/carrinhodecompras"
        android:layout_margin="16dp"
        android:text="@string/txt_btn_activity_wallet_details_buy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>